[package]
name = "frp-weave"
version = "0.1.0"
edition = "2024"
description = "Graph weaving policy contracts for the frp domain layer."
license = "MIT OR Apache-2.0"
repository = "https://github.com/joneseysinno/frp-weave.git"
documentation = "https://docs.rs/frp-weave"
keywords = ["graph", "weave", "assembly", "frp", "infinite-db"]
categories = ["data-structures"]

[dependencies]
frp-domain = { version = "0.1.0", path = "../frp-domain" }
frp-plexus = { version = "0.1.0", path = "../frp-plexus" }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = "1"
